# tactical_scenario_maker

./: .gitignore  README.md  app.py  compose.yaml  diagram.puml  main.py  pyproject.toml  scenario.py  visualize.py
HTN/: actions.py  methods.py  tasks.py
attic/: AI_GENERATOR_README.md  INSTALL_OLLAMA.sh  README.md  ai_scenario_generator.py
bdd/: ai_scenario_generator.py  events.py  knowledge_base.json  primitives_actions.py  tasks_methods.py  utils.py
docker/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  AUDIT_INTERNE.md  PASSATION.md  architecture-unifiee.md  lsga-architecture-v2.md  lsga-architecture-v3.md  rig-e2e.md
doctrine/: knowledge_base.json
logs/: map.html
profiles/: kinematic-ormuz.json
scenarios/: 2_agents_circling.py  2_agents_patrolling.py  convoi_test.json  demo_veille_drone_intru.py  deploiement_drone_direct.py  deux_agents_cercle.json  deux_agents_cercle.py  deux_agents_demi_tour.py  escorte_ormuz.json  evitement_mutuel.py  poursuite_intrus.py  reconnaissance_drone.json  reconnaissance_drone.py  reconnaissance_sans_drone.py  retour_base.py  scenario_1.py  scenario_2.py  scenario_3.py  surveillance_zone.py  surveillance_zone_deux_drones.py  test.py  veille_passive.py
templates/: index.html
tests/: reference_fixtures.py  test_actions.py  test_conditions.py  test_doctrine_generique.py  test_execution_profile.py  test_geo.py  test_intruder_resolution.py  test_lotusim_futures.py  test_methods.py  test_planner.py  test_reference_autonomy.py  test_reference_controller.py  test_reference_e2e_memory.py  test_reference_objectives.py  (+9 more)
(+39 files in other folders)
