[project]
name = "tactical-scenario-maker"
version = "0.1.0"
description = "Créateur de scénarios tactiques LOTUSim (POC)"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
extend-exclude = ["tsm/vendor", "attic", "bdd", "gtpyhop.py", "visualize.py", "scenarios"]

[tool.mypy]
files = ["tsm"]
exclude = ["tsm/vendor"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tsm.vendor.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tsm.domain.*", "tsm.planning.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
strict_equality = true
